# tinyangband

./: .gitignore  Makefile.am  autopick.txt  configure  configure.ac  configure.in  eng.html  index.html  params.json  readme.txt  readme_eng.txt
lib/apex/: Makefile.am
lib/edit/: Makefile.am  a_info.txt  e_info.txt  f_info.txt  k_info.txt  m_info.txt  misc.txt  q_avenge.txt  q_info.txt  q_morgoth.txt  q_random.txt  q_sauron.txt  r_info.txt  t_basic.txt  t_info.txt  v_info.txt  w_info.txt
lib/file/: Makefile.am  aname.txt  aname_j.txt  crime.txt  crime_j.txt  death_j.txt  error_j.txt  mondeath.txt  mondeath_j.txt  monfear.txt  monfear_j.txt  monfrien.txt  monfrien_j.txt  (+8 more)
lib/help/: Makefile.am  Makefile.in  attack.txt  birth.txt  charattr.txt  command.txt  defend.txt  dungeon.txt  general.txt  j_feature.txt  j_general.txt  j_history.txt  j_item2.txt  j_trans.txt  jattack.txt  jbirth.txt  jcharattr.txt  jcommand.txt  jdefend.txt  jdungeon.txt  jeditor.txt  jgambling.txt  jgeneral.txt  jhelp.hlp  jhelpinfo.txt  jmonster.txt  jobjects.txt  joption.txt  jpref.txt  jspecial.hlp  jtown.txt  jversion.txt  objects.txt  option.txt  town.txt  version.txt
src/: Makefile.am  Makefile.in  ang_eng.rc  angband.rc  artifact.c  autopick.c  birth.c  bldg.c  cave.c  chuukei.c  cmd1.c  cmd2.c  cmd3.c  cmd4.c  cmd5.c  cmd6.c  defines.h  dungeon.c  effects.c  externs.h  files.c  flavor.c  generate.c  generate.h  grid.c  grid.h  h-config.h  h-define.h  h-system.h  h-type.h  init.h  init1.c  init2.c  japanese.c  load.c  maid-x11.c  main-gcu.c  main-mac-carbon.c  main-mac.c  main-mac.new  (+48 more)
(+8 files in other folders)
